# atcoder-contest-framework

./: .gitignore  README.md  pyproject.toml
contest/: D.py  Makefile  submission.py
contest/tests/: core.py  test_submission.py
practice/: Makefile
