[project]
name = "cp-atcoder"
version = "0.1.0"
description = ""
authors = [
    {name = "Natachat Teecharcharn",email = "nteechar@Natachats-MacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
